# grasp-cube-sample

./: .gitignore  .gitmodules  generate_convex.py  hello_pick_cube.py  hello_robot.py  pyproject.toml
agents/robots/so101/: so_101.py
assets/robots/so101/so101_new/assets/: Wrist_Cam_Mount_32x32_UVC_Module_SO101.stl
assets/robots/so101/so101_old/: so101.urdf
assets/robots/so101/so101_old/assets/: base_motor_holder_so101_v1.stl.convex.stl  base_so101_v2.stl.convex.stl  motor_holder_so101_base_v1.stl.convex.stl  sts3215_03a_no_horn_v1.stl.convex.stl  sts3215_03a_v1.stl.convex.stl  upper_arm_so101_v1.stl.convex.stl  wrist_roll_pitch_so101_v2.stl.convex.stl
envs/tasks/: pick_cube_so101.py
grasp_cube/: __init__.py
grasp_cube/agents/robots/so101/: so_101.py
grasp_cube/assets/robots/so101/so101_old/assets/: Wrist_Cam_Mount_32x32_UVC_Module_SO101.stl.convex.stl  motor_holder_so101_wrist_v1.stl.convex.stl  moving_jaw_so101_v1.stl.convex.stl  rotation_pitch_so101_v1.stl.convex.stl  under_arm_so101_v1.stl.convex.stl  waveshare_mounting_plate_so101_v2.stl.convex.stl  wrist_roll_follower_so101_v1.stl.convex.stl
grasp_cube/envs/: __init__.py
grasp_cube/envs/tasks/: pick_cube_so101.py
grasp_cube/motionplanning/so101/: motionplanner.py  run.py
grasp_cube/motionplanning/so101/solutions/: pick_cube.py
grasp_cube/motionplanning/two_finger_gripper/: motionplanner.py
motionplanning/so101/: motionplanner.py  run.py
motionplanning/so101/solutions/: pick_cube.py
motionplanning/two_finger_gripper/: motionplanner.py
rl/tdmpc2/: requirements.txt
